[package]
name = "hacash"
version = "0.2.0"
edition = "2021"
resolver = "2"

[dependencies]
x16rs = { path = "./x16rs" }
sys = { path = "./sys" }
field = { path = "./field" }
protocol = { path = "./protocol" }
chain = { path = "./chain" }
mint = { path = "./mint" }
node = { path = "./node" }
server = { path = "./server" }
app = { path = "./app" }
ctrlc = "3.4.5"
hex = "0.4.3"

[features]
default = ["db-rusty-leveldb"]
db-sled = ["protocol/db-sled", "chain/db-sled"]
db-rusty-leveldb = ["protocol/db-rusty-leveldb", "chain/db-rusty-leveldb"]
db-leveldb-sys = ["protocol/db-leveldb-sys", "chain/db-leveldb-sys"]


[profile.release]
opt-level = 3       # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary


