[package]
name = "hacash"
default-run = "hacash"
version = "0.3.0"
edition = "2024"

[dependencies]
x16rs = {path = "./x16rs"}
sys = {path = "./sys"}
field = {path = "./field"}
protocol = {path = "./protocol"}
db = {path = "./db", default-features = false}
mint = {path = "./mint"}
chain = {path = "./chain"}
node = {path = "./node"}
server = {path = "./server"}
app = {path = "./app"}


[features]
default = ["db-sled"]
db-sled = ["db/db-sled"]
db-rusty-leveldb = ["db/db-rusty-leveldb"]
db-leveldb-sys = ["db/db-leveldb-sys"]

