[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
x16rs = {path = "../x16rs"}
sys = {path = "../sys"}
field = {path = "../field"}
protocol = {path = "../protocol"}
hex = "0.4.3"
serde = "1.0.215"
serde_json = "1.0.133"
reqwest = { version = "0.12.5", features = ["blocking"] }
getrandom = "0.2.15"
lazy_static = "1.4.0"


