[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = { version = "0.34.7", optional = true }
rusty-leveldb = { version = "3.0.2", optional = true }
libc = { version = "0.2.4", optional = true }
leveldb-sys = { version = "2.0.9", optional = true }

[features]
db-sled = ["sled"]
db-rusty-leveldb = ["rusty-leveldb"]
db-leveldb-sys = ["libc", "leveldb-sys"]
